Fixed width & horizontal scroll for module ribbons

--- a/client/src/components/ModuleBoard.scss
+++ b/client/src/components/ModuleBoard.scss
@@ -16,6 +16,7 @@
 }
 
 .module-list-wrapper {
+    width: 100%;
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 0 0.5rem;
@@ -28,9 +29,10 @@
 .module-list {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
     border-radius: 5px;
     background-color: #49505e;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .workflow-input {
